# tutorIA_back

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml
.cargo/: config.toml  config_example.toml
.sqlx/: query-011020154846ee7aa938477bdd0e9c15c764e4959d6635fcdb12fef925b846eb.json  query-20b59bb0c0366596fcf3385db1b2df2ba7346037421f55cf9c841deefca64937.json  query-21aa611d229770e65a5f9a01e924fe7ed7aeeccfc32ef0e9ea1a172d758ff5f7.json  query-431ee46ccaaf9fddffcd8b65b51c8b0c3e3febb1ebef910e9f5991c616a68b5a.json  query-5dea949be4e5f5a1633b3097fbfc34b56bf16b351d1823af3f2249ff6a56dac7.json  query-66c50017fb2ad31447c082149445f0ed157a49b5f609c04141361ad2610e2226.json  query-97f7b7e14489d253a60beb9d74ee33dcddb93fc1b5fb6d78365a5d13b0088052.json  query-9ce085108a1d3b11bd3a3a88e528052267c5fd71c1851dd40bf138569579d0c7.json  query-ab0088b3a08173d59b7f02ce73a38a4ae41859200443b0c663d8b1ced13e6656.json  query-ab8769aa6b976f29f9b0bbcba4094a299194e1678e4ae54adc90100170bac302.json  query-be45a601491852b5a71b17f0742ed7a13654005219876c56cf5f453898e202fc.json  query-d71105419f446e5b7f2d84f9854caf270fb2e4724e4421b4b687217c47753ded.json  query-df52f22693d5f08eb549727f376eb032b9f7880022d773ddc1921e12de8cea9e.json  query-f534574dbf962f6e36af4802e51c938a596e4d1bc724fa756a8784d9f47ca57d.json  query-fe40f4631064e7c0a9da9c0bb6c33bfd45cae7859b4482cce8fc2cabee9834bb.json
docker_env/: .env  .env-example
migrations/dev_initial/: 01-create-schema.sql
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  jwt.rs
src/ctx/: error.rs  mod.rs
src/model/: aluno.rs  base.rs  error.rs  materia.rs  mod.rs  professor.rs  usuario.rs
src/model/store/: error.rs
src/utils/: error.rs  mod.rs  time.rs
src/web/: error.rs  mod.rs
src/web/middlewares/: auth.rs  cors.rs  mod.rs  response_map.rs
src/web/routes/: aluno.rs  alunos.rs  auth.rs  authenticate.rs  jwt.rs  materia.rs  mod.rs  usuario.rs
tutorIA/: instructions.md  tutorIA.toml
tutorIA_API/: Cargo.toml
tutorIA_API/src/: config.rs  main.rs
tutorIA_API/src/crypt/: jwt.rs  mod.rs
tutorIA_API/src/model/: base.rs  professor.rs  tutor.rs
tutorIA_API/src/web/routes/: materia.rs  usuario.rs
tutorIA_agent/: Cargo.toml
tutorIA_agent/src/: config.rs  error.rs  lib.rs
tutorIA_agent/src/ais/: assistand.rs  error.rs  mod.rs
tutorIA_agent/src/tutor_ia/: config.rs  error.rs  mod.rs
tutorIA_agent/src/tutoria/: config.rs  ctx.rs  error.rs  mod.rs
tutorIA_agent/src/utils/: error.rs  files.rs  mod.rs
tutoria_agent/: Cargo.toml
tutoria_agent/src/: config.rs  error.rs  lib.rs
tutoria_agent/src/ais/: assistant.rs  embeddings.rs  error.rs  message.rs  mod.rs
tutoria_agent/src/tutoria/: config.rs  error.rs  mod.rs
tutoria_agent/src/utils/: error.rs
tutoria_api/: Cargo.toml
tutoria_api/src/: config.rs  error.rs  main.rs
tutoria_api/src/_dev_utils/: dev_db.rs
tutoria_api/src/crypt/: error.rs  pwd.rs
tutoria_api/src/manager/: error.rs  mod.rs
tutoria_api/src/model/: aluno.rs  base.rs  chat.rs  error.rs  materia.rs  mensagem.rs  mod.rs  professor.rs  tutor.rs  usuario.rs
(+16 files in other folders)
