[package]
name = "tutorIA_back"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1.37.0", features = ["full"]}

# -- Web
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

# -- Json
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
serde_with = "3.8.1"

# -- Data
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"]}
sqlb = "0.4.0"

# -- Others
derive_more = { version = "0.99.17", features = ["from"]}
uuid = { version = "1.8.0", features = ["serde"]}


