[package]
name = "tutorIA_agent"
version = "0.1.0"
edition = "2021"
description = "Agente IA utilizado pela API do TutorIA"

[dependencies]
# -- Async
tokio = { version = "1.37.0", features = ["full"]}
# -- AI
async-openai = "0.23.2"
# -- D/Serialize
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
toml = "0.8.14"
# -- Others
derive_more = { version = "0.99.17", features = ["from"]}